fixing dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
     --primary:  60 93% 87%;
     --primary-foreground: 222.2 47.4% 11.2%;
  
-    --secondary: 44 100% 28%;
+    --secondary: 60 96% 8%;
     --secondary-foreground: 210 40% 98%;
  
     --accent: 60 93% 87%;
